--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     
     
 
-    <p class="copy-right">©VaishMano</p>
+    <p class="copy-right">©VaishMano2020</p>
 
   </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
